<resources>
    <string name="app_name">Intact Test App</string>
    <string name="toolbar_title">TASCH</string>
    <string name="catalog_title">Product Catalogue</string>
    <string name="wishlist_title">Your wish list</string>
    <string name="wishlist_total">Total %1$s</string>
    <string name="wishlist_subtotal">Sub-Total %1$s</string>
    <string name="product_color_title">Colors</string>
    <string name="product_dimension_title">Size</string>
    <string name="product_rate">Rate\nthe product</string>
    <string name="free_shipping">Free shipping world wide</string>
    <string name="add_to_widhlist">Add to wishlist</string>
    <string name="remove_from_wishlist">Remove from wishlist</string>
    <string name="checkout">Proceed to checkout</string>
    <string name="wish_list_empty">Your Wish List is Empty</string>
    <string name="added_to_wishlist">Product added to Wish List</string>
    <string name="removed_from_wishlist">Product removed from Wish List</string>
    <string name="out_of_stock">Out Of Stock</string>
    <string name="checkout_message">Are you sure you want to proceed to checkout?</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="language_iso_639_2_code">eng</string>
    <string name="language_iso_639_1_code">en</string>
    <string name="language_name">english</string>
    <string name="language_code">1</string>
    <string name="height">H</string>
    <string name="width">W</string>
    <string name="depth">D</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
