<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/list_item_container"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardUseCompatPadding="true">


            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.constraint.ConstraintLayout
                    android:id="@+id/productInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/productPrice"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="$250"
                        android:textColor="@color/ColorProductDetailsText"
                        android:textSize="30sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/productShippingText"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/free_shipping"
                        android:textColor="@color/ColorShippingText"
                        android:textSize="20sp"
                        app:layout_constraintBaseline_toBaselineOf="@+id/productPrice"
                        app:layout_constraintEnd_toEndOf="parent" />

                    <View
                        android:id="@+id/seperator"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="24dp"
                        android:background="@color/ColorWishList"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/productShippingText" />

                </android.support.constraint.ConstraintLayout>


                <android.support.constraint.ConstraintLayout
                    android:id="@+id/productTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/productInfo">

                    <TextView
                        android:id="@+id/productDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="16dp"
                        android:textColor="@color/ColorProductDetailsText"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:text="THIS A DISCRIPTION TEX TTEST" />

                    <TextView
                        android:id="@+id/productColorsTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/product_color_title"
                        android:textColor="@color/ColorProductDetailsText"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/productDescription" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/productColors"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:orientation="horizontal"
                        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
                        app:layout_constraintStart_toEndOf="@+id/productColorsTitle"
                        app:layout_constraintTop_toBottomOf="@+id/productDescription"></android.support.v7.widget.RecyclerView>

                    <TextView
                        android:id="@+id/productDimTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/product_dimension_title"
                        android:textColor="@color/ColorProductDetailsText"
                        android:textSize="20dp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/productColors" />

                    <TextView
                        android:id="@+id/productDimensions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="64dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="24dp"
                        android:text="@string/product_dimension_title"
                        android:textColor="@color/ColorProductDetailsText"
                        android:textSize="20dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/productDimTitle"
                        app:layout_constraintTop_toBottomOf="@+id/productColors" />


                </android.support.constraint.ConstraintLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/list_item_container2"
            style="@style/CardView.Light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/productRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginBottom="6dp"
                    android:text="@string/product_rate"
                    android:textColor="@color/ColorProductDetailsText"
                    android:textSize="18dp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="6dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/productRate"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="@android:color/white">

                    <Button
                        style="@style/rateButton"
                        android:id="@+id/star1"
                        android:onClick="onStarClicked"
                        android:tag="1"
                        android:background="@mipmap/star_grey"/>

                    <Button
                        style="@style/rateButton"
                        android:id="@+id/star2"
                        android:onClick="onStarClicked"
                        android:tag="2"
                        android:background="@mipmap/star_grey"/>

                    <Button
                        style="@style/rateButton"
                        android:id="@+id/star3"
                        android:onClick="onStarClicked"
                        android:tag="3"
                        android:background="@mipmap/star_grey"/>

                    <Button
                        style="@style/rateButton"
                        android:id="@+id/star4"
                        android:onClick="onStarClicked"
                        android:tag="4"
                        android:background="@mipmap/star_grey"/>

                    <Button
                        style="@style/rateButton"
                        android:id="@+id/star5"
                        android:onClick="onStarClicked"
                        android:tag="5"
                        android:background="@mipmap/star_grey"/>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/add2WishLit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@android:color/white"
            android:background="@color/ColorButton"
            android:textStyle="bold"
            android:text="@string/add_to_widhlist"
            tools:text="Add to wish list"
            android:onClick="onToggleWishList"/>
    </LinearLayout>
</layout>